2006-06-01  Derek Atkins  <derek@ihtfp.com>

	* configure.in: Don't need to patch libtool for darwin anymore.
	  Patch by David Reiser.
	* src/gnome-utils/dialog-preferences.c: fix non-C99 construct so
	  the file builds again.

	* po/nb.po: updated Norwegian Bokmål translation by Sigve Indregard

	* src/backend/Makefile.am:
	* src/backend/gnc-backend-api.h:
	  deleted gnc-backend-api.h, which isn't needed by anything
	* src/backend/file/gnc-backend-file.[ch]:
	  make "gnc_new_backend()" into a private function.  It's
	  never called from anywhere, so it's not needed in the API.
	* src/backend/file/Makefile.am:
	  Build a shared library (libgnc-backend-file-utils) and a
	  loadable module (libgnc-backend-file).  This should let us
	  build on MacOS AND windows.
	* src/business/business-core/file/Makefile.am:
	* src/gnome/Makefile.am:
	  link against libgnc-backend-file-utils

2006-06-01  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-preferences.c: Do not try to find
	  positions for alphabetic insertions of add_on pages, but rather
	  append and then sort pages in the end. Solves appearance of pref
	  dialog in non-C locales.

	* src/gnome-utils/glade/preferences.glade: Move "Accounting
	  Period" to the top, regardless of above.

	* src/gnome-utils/gnc-main-window.c: Cancel renaming of a page
	  when GDK_Escape is pressed. Fixes #343226.

2006-05-31  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-tree-model-account.c: Replace
	  gnc_tree_model_account_path_changed with manual checks whether
	  the inserted (resp. deleted) account is the first (resp. last)
	  account in its level and call gtm_row_has_child_toggled only in
	  these cases. Might fix #343405, as GtkTreeModelFilter seems to
	  make (false) assumptions when being woken up too often.

2006-05-31  Derek Atkins  <derek@ihtfp.com>

	* po/es.po:  Updated Spanish Translation from Eneko Lacunza

	* src/business/business-core/gncAddress.c: remove some duplicated code.
